--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,50 @@
-Flask	2.1.2
-Flask-Bootstrap	3.3.7.1
-Flask-Bootstrap4	4.0.2
-Flask-CKEditor	0.4.6
-Flask-Gravatar	0.5.0
-Flask-Login	0.6.1
-Flask-SQLAlchemy	2.5.1
-Flask-WTF	1.0.1
-Jinja2	3.1.2
-MarkupSafe	2.1.1
-SQLAlchemy	1.4.39
-SQLAlchemy-Utils	0.38.2
-WTForm	1.0
-WTFormValidation	1.0.0
-WTForms	3.0.1
-WTForms-Alchemy	0.18.0
-WTForms-Components	0.10.5
-WTForms-SQLAlchemy	0.3
-Werkzeug	2.1.2
-certifi	2022.6.15
-charset-normalizer	2.1.0
-click	8.1.3
-colorama	0.4.5
-decorator	5.1.1
-dnspython	2.2.1
-dominate	2.6.0
-email-validator	1.2.1
-flask-bootstrap5	0.1.dev1
-greenlet	1.1.2
-idna	3.3
-infinity	1.5
-intervals	0.9.2
-itsdangerous	2.1.2
-marshmallow	3.17.0
-packaging	21.3
-pip	21.2.4
-pyparsing	3.0.9
-python-dotenv	0.20.0
-python-form	0.2.3
-python-wtf	0.1.1
-requests	2.28.1
-setuptools	58.1.0
-six	1.16.0
-urllib3	1.26.9
-validators	0.20.0
-visitor	0.1.3
-webargs	8.1.0
-wtf	0.1	0.1
-wtforms-bootstrap5	0.1.1
-wtfpython	0.2.1
+Flask==2.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-Bootstrap4==4.0.2
+Flask-CKEditor==0.4.6
+Flask-Gravatar==0.5.0
+Flask-Login==0.6.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+SQLAlchemy==1.4.39
+SQLAlchemy-Utils==0.38.2
+WTForm==1.0
+WTFormValidation==1.0.0
+WTForms==3.0.1
+WTForms-Alchemy==0.18.0
+WTForms-Components==0.10.5
+WTForms-SQLAlchemy==0.3
+Werkzeug==2.1.2
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+decorator==5.1.1
+dnspython==2.2.1
+dominate==2.6.0
+email-validator==1.2.1
+flask-bootstrap5==0.1.dev1
+greenlet==1.1.2
+idna==3.3
+infinity==1.5
+intervals==0.9.2
+itsdangerous==2.1.2
+marshmallow==3.17.0
+packaging==21.3
+pip==21.2.4
+pyparsing==3.0.9
+python-dotenv==0.20.0
+python-form==0.2.3
+python-wtf==0.1.1
+requests==2.28.1
+setuptools==58.1.0
+six==1.16.0
+urllib3==1.26.9
+validators==0.20.0
+visitor==0.1.3
+webargs==8.1.0
+wtf==0.1
+wtforms-bootstrap5==0.1.1
+wtfpython==0.2.1
